AOSP/UnifiedEmail: Updating app shortcut Icon [1/2]

--- a/res/xml/shortcuts.xml
+++ b/res/xml/shortcuts.xml
@@ -3,7 +3,7 @@
   <shortcut
     android:shortcutId="composeActivityEmailExternal"
     android:enabled="true"
-    android:icon="@drawable/ic_pencil_wht_24dp"
+    android:icon="@drawable/ic_pencil"
     android:shortcutShortLabel="@string/compose"
     android:shortcutLongLabel="@string/compose"
     android:shortcutDisabledMessage="@string/compose">
