--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -27,6 +27,7 @@
     <color name="gray_text_color">#777777</color>
     <color name="dark_gray_text_color">#58585b</color>
     <color name="light_gray">#cccccc</color>
+	<color name="gray_line">@color/light_gray</color>
     <color name="very_light_grey">#f5f5f5</color>
     <!-- if you want to make something blue, please try to use THIS blue -->
     <color name="mail_app_blue">@android:color/holo_blue_light</color>
